--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h2>Summary: Latitude vs. X </h2>
             <img src="Resources/assets/images/Fig1.png">
 
-            <p>The purpose of this project was to analyze how weathe rcvhanges as you get closer to the equator. To accomplish this analysis I first pulled data from OpenWeatherMap API to assemble a dataset on over 500 cities. 
+            <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis I first pulled data from OpenWeatherMap API to assemble a dataset on over 500 cities. 
 
                 Afther assembling the dataset, I used MAtplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: Temperture, Cloudiness, Wind Speed, and Humidity. This site provides the source data and visualiztions created as part of the analysis, as well as explanations and descriptions of any treads and correlations witnessed.
 
