--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 -->
         
         <!-- Header-->
-            <h2> text_align = center; "Summary: Latitude vs. X" </h2>
+            <h2> "Summary: Latitude vs. X" </h2>
             <img src="Resources/assets/images/Fig1.png">
 
             <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis I first pulled data from OpenWeatherMap API to assemble a dataset on over 500 cities. 
